<resources>
    <string name="app_name">task1</string>

    <string name="_00515_text"></string>
    <string name="_1033_text">1033</string>
    <string name="_254_123_456789_text">254 123-456789</string>
    <string name="_28_years_text">28 years</string>
    <string name="_28_years_text1">28 years</string>
    <string name="_30_years_text">30 Years</string>
    <string name="_8695772987_text">8695772987</string>
    <string name="add_on_riders_text">Add-On Riders</string>
    <string name="alcohol_text">Alcohol</string>
    <string name="amara_gmail_com_text">Amara@gmail.com</string>
    <string name="amara_text">Amara</string>
    <string name="annaual_income_text">Annaual income</string>
    <string name="annaualincomeDialogValue">\"annual income field is empty \"</string>
    <string name="annualDialogTag">\" annual income incorrect\"</string>
    <string name="annual_income_tag">Annual income <font color='#ff0000'>*</font></string>
    <string name="city_tag">City</string>
    <string name="city_text">Locality</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="company_text">Company:</string>
    <string name="continue_btn_tag">Continue</string>
    <string name="coverage_text">Coverage</string>
    <string name="critical_illness_plus_benefits_text">Critical illness plus benefits</string>
    <string name="education_tag">Education <font color='#ff0000'>*</font></string>
    <string name="education_text">Education</string>
    <string name="emailDialogTag">User email incorrect</string>
    <string name="emailDialogTagValue">\"email field is empty \"</string>
    <string name="email_id_tag">Email ID <font color='#ff0000'>*</font></string>
    <string name="email_id_text">Email id</string>
    <string name="email_tag_hint">email</string>
    <string name="email_text">Email</string>
    <string name="employee_id_text">Employee id</string>
    <string name="error_a11y_label">Error: invalid</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exceptionText">exception</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="first_latout_text_2a">30,0000</string>
    <string name="first_layout_1_text">Policy Term</string>
    <string name="first_layout_1a_text">28,0000</string>
    <string name="first_layout_2_text">Pay Term</string>
    <string name="first_layout_3_text">Sum Assured</string>
    <string name="first_layout_3a">10,00,00,000</string>
    <string name="full_name_tag">Full Name <font color='#ff0000'>*</font></string>
    <string name="full_name_tag_hint">Full Name</string>
    <string name="full_name_text">Full Name</string>
    <string name="fullnameDialogValue">\"user name field is empty \"</string>
    <string name="fullnameDialogValue1">\"name should minimum contain two characters \"</string>
    <string name="gender_text">Gender</string>
    <string name="graduate_text">Graduate</string>
    <string name="group_radio_button_text">Payout type</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="image_description">image</string>
    <string name="item_view_role_description">Tab</string>
    <string name="jeeva_text">Jeeva</string>
    <string name="jeevaprakash_g_text">Jeevaprakash G</string>
    <string name="jeevarag1016_gmail_com_text">jeevarag1016@gmail.com</string>
    <string name="ksh_10_million_text">Ksh 10 Million</string>
    <string name="ksh_500_000_text">Ksh 500,000</string>
    <string name="ksh_7_087_tag">Ksh 7,087</string>
    <string name="ksh_7_087_text">Ksh 7,087</string>
    <string name="ksh_tag">Ksh</string>
    <string name="listViewTag1">Critical illness plus benefit</string>
    <string name="listViewTag17">Critical illness plus benefit</string>
    <string name="listViewTag2">Critical illness plus benefit</string>
    <string name="listViewTag3">Critical illness plus benefit</string>
    <string name="listViewTag4">Critical illness plus benefit</string>
    <string name="listViewTag5">Critical illness plus benefit</string>
    <string name="listViewTag6">Critical illness plus benefit</string>
    <string name="listViewTag8">Critical illness plus benefit</string>
    <string name="listViewTag9">Critical illness plus benefit</string>
    <string name="listViewTagValue1">Premium value : Ksh 591 Monthly</string>
    <string name="listViewTagValue2">Premium value : Ksh 600 Monthly</string>
    <string name="listViewTagValue3">Premium value : Ksh 700 Monthly</string>
    <string name="listViewTagValue4">Premium value : Ksh 800 Monthly</string>
    <string name="listViewTagValue5">Premium value : Ksh 500 Monthly</string>
    <string name="listViewTagValue6">Premium value : Ksh 550 Monthly</string>
    <string name="listViewTagValue7">Premium value : Ksh 340 Monthly</string>
    <string name="listViewTagValue8">Premium value : Ksh 420 Monthly</string>
    <string name="listViewTagValue9">Premium value : Ksh 660 Monthly</string>
    <string name="logout_text">logout</string>
    <string name="lumpsum_text">Lumpsum</string>
    <string name="male_text">Male</string>
    <string name="maritalStatusDialogTag">\" marital status incorrect\"</string>>
    <string name="material_motion_easing_accelerated">cubic-bezier(0.4, 0.0, 1.0, 1.0)</string>
    <string name="material_motion_easing_decelerated">cubic-bezier(0.0, 0.0, 0.2, 1.0)</string>
    <string name="material_motion_easing_emphasized">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="material_motion_easing_linear">cubic-bezier(0.0, 0.0, 1.0, 1.0)</string>
    <string name="material_motion_easing_standard">cubic-bezier(0.4, 0.0, 0.2, 1.0)</string>
    <string name="mobile_number_text">Mobile number</string>
    <string name="mode_of_premium_payment_text">Mode of premium payment</string>
    <string name="nairobi_text">Nairobi</string>
    <string name="nameDialogBoxTag">User name incorrect</string>
    <string name="nameDialogBoxTag1">User name incorrect</string>
    <string name="name_text">Name</string>
    <string name="no_text">No</string>
    <string name="no_text2">No</string>
    <string name="occupation_tag">Occupation <font color='#ff0000'>*</font></string>
    <string name="occupation_text">Occupation</string>
    <string name="on_your_policy_document_text">on your policy document.</string>
    <string name="others_text">Others</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="pay_for_text">Pay For</string>
    <string name="payment_amount_text">Payment Amount</string>
    <string name="payout_type_text">Payout Type</string>
    <string name="per_year_tag">per year</string>
    <string name="phone_number_text">Phone number</string>
    <string name="pincodeDialogTag">pin-code incorrect</string>
    <string name="pincodeDialogTag1">pin-code incorrect</string>
    <string name="pincodeDialogValue">\"pin-code field is empty \"</string>
    <string name="pincodeDialogValue1">\"pin-code format is wrong \"</string>
    <string name="pincode_tag">Pincode</string>
    <string name="pincode_text">Pincode</string>
    <string name="policy_term_text">Policy Term</string>
    <string name="radio_button_1_text">Ksh 10 Million in a single instalment</string>
    <string name="radio_button_2_text">Ksh 10 Million on death plus Ksh 14,000 monthly income for 15 years</string>
    <string name="radio_button_3_text">Ksh 10 Million on death plus increasing monthly income for 15 years wherein the first year monthly income will be Ksh 14,796 and it will increase every year upto Ksh 35510</string>
    <string name="review_the_below_details_this_information_will_be_printed_text">Review the below details.This information will be printed</string>
    <string name="scrollView_heading">Your Details</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="summary_text">Summary</string>
    <string name="swiftant_text">SwiftAnt</string>
    <string name="till_you_turn_text">Till You Turn</string>
    <string name="tobacco_text">Tobacco</string>
    <string name="todo_description">TODO</string>
    <string name="todo_description1">TODO</string>
    <string name="todo_description2">TODO</string>
    <string name="todo_description4">TODO</string>
    <string name="total_premium_tag">Total Premium</string>
    <string name="upgrade_your_plan_text">Upgrade Your Plan</string>
    <string name="useremailDialogTag1">User email incorrect</string>
    <string name="useremailDialogTagvalue1">\"email format is wrong \"</string>
    <string name="validationText" />
    <string name="validation_text">validation done successfully</string>
    <string name="workouts_text">Workouts</string>
    <string name="yearly_text">Yearly</string>
    <string name="yes_text">Yes</string>
    <string name="your_details_text">Your Details</string>
    <string name="martial_status_tag">Martial status</string>
    <string name="maritalStatusDialogValue">Martial status filed is empty</string>
    <string name="cityFieldDialogTag">City field is incorrect</string>
    <string name="cityFieldDialogValue">City field is empty</string>
    <string name="mobile_tag">Mobile <font color='#ff0000'>*</font></string>
    <string name="do_you_smoke_or_chew_tobacco_tag">Do you smoke or chew tobacco? <font color='#ff0000'>*</font></string>
    <string name="gender_tag">Gender <font color='#ff0000'>*</font></string>
    <string name="coverage_tag">Coverage <font color='#ff0000'>*</font></string>
    <string name="terms_tag">Terms <font color='#ff0000'>*</font></string>
    <string name="update_proceed_tag"><![CDATA[Update & Proceed]]></string>
    <string name="_254_tag">+254</string>
    <string name="yes_tag">Yes</string>
    <string name="no_tag">No</string>
    <string name="i_understand_that_any_changes_made_to_the_above_fields_will_affect_the_premium_for_the_policy_i_have_chosen_tag">I understand that any changes made to the above fields will affect the premium for the policy I have chosen</string>
    <string name="appURL">https://uat-integrationportal.insure.digital/api/v1/ip/</string>
    <string name="error_api_tag">ERROR</string>
    <string name="error_tag_value">Something went wrong</string>
    <string name="apiURL">https://uat-integrationportal.insure.digital/api/v1/ip/uad/uad/GetUserProfile</string>
</resources>

