<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/profile_back"
    android:gravity="fill_horizontal"
    android:orientation="vertical"
    android:weightSum="10">

    <androidx.cardview.widget.CardView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="100dp"
        app:cardElevation="8dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/todo_description4"
            android:scaleType="centerCrop"
            android:src="@drawable/profile" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/latinotypeantartidaroundedbold"
        android:text="@string/jeevaprakash_g_text"
        android:textColor="@color/black" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/latinotypeantartidaroundedmedium"
            android:text="@string/company_text"
            android:textColor="@color/dark_grey" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/latinotypeantartidaroundedbold"
            android:text="@string/swiftant_text"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/customback"
        android:elevation="8dp"
        android:orientation="vertical"
        android:padding="10dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="10">

            <TableRow
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:fontFamily="@font/latinotypeantartidaroundedbold"
                    android:gravity="start|center_vertical"
                    android:text="@string/employee_id_text"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:fontFamily="@font/latinotypeantartidaroundedmedium"
                    android:gravity="end|center_vertical"
                    android:text="@string/_1033_text"
                    android:textColor="@color/dark_grey" />

                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:src="@drawable/right" />
            </TableRow>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp" />

            <TableRow
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:fontFamily="@font/latinotypeantartidaroundedbold"
                    android:gravity="start|center_vertical"
                    android:text="@string/name_text"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:fontFamily="@font/latinotypeantartidaroundedmedium"
                    android:gravity="end|center_vertical"
                    android:text="@string/jeeva_text"
                    android:textColor="@color/dark_grey" />

                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:src="@drawable/right" />
            </TableRow>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp" />

            <TableRow
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:fontFamily="@font/latinotypeantartidaroundedbold"
                    android:gravity="start|center_vertical"
                    android:text="@string/email_text"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:fontFamily="@font/latinotypeantartidaroundedmedium"
                    android:gravity="end|center_vertical"
                    android:text="@string/jeevarag1016_gmail_com_text"
                    android:textColor="@color/dark_grey" />

                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:src="@drawable/right" />
            </TableRow>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp" />

            <TableRow
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:fontFamily="@font/latinotypeantartidaroundedbold"
                    android:gravity="start|center_vertical"
                    android:text="@string/phone_number_text"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:fontFamily="@font/latinotypeantartidaroundedmedium"
                    android:gravity="end|center_vertical"
                    android:text="@string/_8695772987_text"
                    android:textColor="@color/dark_grey" />

                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:src="@drawable/right" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/latinotypeantartidaroundedbold"
        android:text="@string/logout_text"
        android:textAllCaps="false" />
</LinearLayout>
