<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/firstLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:elevation="@dimen/activity_layout_elevation_10dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/latinotypeantartidaroundedmedium"
                android:gravity="center"
                android:text="@string/first_layout_1_text"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/latinotypeantartidaroundedmedium"
                android:gravity="center"
                android:text="@string/first_layout_1a_text"
                android:textColor="@color/link_blue" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:background="@drawable/verticalline" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/latinotypeantartidaroundedmedium"
                android:gravity="center"
                android:text="@string/first_layout_2_text"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/first_latout_text_2a"
                android:textColor="@color/link_blue" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:background="@drawable/verticalline" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/latinotypeantartidaroundedmedium"
                android:gravity="center"
                android:text="@string/first_layout_3_text"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/first_layout_3a"
                android:textColor="@color/link_blue" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lastLinearlayout"
        android:layout_below="@+id/firstLinearLayout"
        android:layout_margin="20dp"
        android:gravity="center"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittextback"
            android:orientation="vertical"
            android:padding="@dimen/activity_layout_elevation_10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="@dimen/activity_margin_30dp"
                android:fontFamily="@font/latinotypeantartidaroundedbold"
                android:text="@string/group_radio_button_text"
                android:textColor="@color/black" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_padding_start_20dp"
                android:orientation="vertical">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill"
                    android:fontFamily="@font/latinotypeantartidaroundedmedium"
                    android:text="@string/radio_button_1_text"
                    android:textSize="@dimen/activity_text_size_14sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/latinotypeantartidaroundedmedium"
                    android:gravity="fill"
                    android:text="@string/radio_button_2_text"
                    android:textSize="@dimen/activity_text_size_14sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/latinotypeantartidaroundedmedium"
                    android:gravity="fill"
                    android:text="@string/radio_button_3_text"
                    android:textSize="@dimen/activity_text_size_14sp" />
            </RadioGroup>


        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/lastLinearlayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_layout_height"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:showDividers="end">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="@dimen/activity_padding_10dp"
                android:paddingStart="@dimen/activity_padding_start_20dp">

                <TextView
                    android:id="@+id/totalPremium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/latinotypeantartidaroundedmedium"
                    android:padding="@dimen/activity_padding_8dp"
                    android:text="@string/total_premium_tag"
                    android:textColor="@color/blue" />

                <TextView
                    android:id="@+id/ksh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/totalPremium"
                    android:layout_marginBottom="@dimen/activity_margin_bottom_10dp"
                    android:paddingStart="@dimen/activity_padding_start_8dp"
                    android:text="@string/ksh_7_087_tag"
                    android:textColor="@color/green" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/totalPremium"
                    android:layout_marginBottom="@dimen/activity_margin_bottom_10dp"
                    android:layout_toRightOf="@+id/ksh"
                    android:fontFamily="@font/latinotypeantartidaroundedmedium"
                    android:paddingStart="@dimen/activity_padding_start_5dp"
                    android:text="@string/per_year_tag" />
            </RelativeLayout>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/continueBtn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_button_height_70dp"
            android:layout_weight="1"
            android:background="@color/green"
            android:fontFamily="@font/latinotypeantartidaroundedmedium"
            android:text="@string/continue_btn_tag"
            android:textColor="@color/white" />
    </LinearLayout>
</RelativeLayout>
